# Advent-of-Code-2023

./: .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml
day-01/: CMakeLists.txt  CMakePresets.json  example3.txt
day-01/challenge-01/: CMakeLists.txt  CMakePresets.json
day-01/challenge-01/cmake/: genericTarget.cmake
day-01/challenge-01/include/: trebuchet.h
day-01/challenge-01/src/: main.cpp  trebuchet.cpp
day-01/challenge-01/test/: CMakeLists.txt  test01.txt  test03.txt  test_parseCalibrationString.cpp  trebuchet.cpp
day-01/cmake/: genericTarget.cmake
day-01/include/: trebuchet.h
day-01/src/: main.cpp  trebuchet.cpp
day-01/test/: CMakeLists.txt  test01.txt  test02.txt  test_calculateCalibrationExamples.cpp  test_parseCalibrationString.cpp  test_stringConvert.cpp  test_trebuchetDigits.cpp
day-02/: CMakeLists.txt
day-02/include/: cubeConundrum.h  game.h  token.h
day-02/src/: cubeConundrum.cpp  game.cpp  main.cpp  token.cpp
day-02/test/: CMakeLists.txt  test_cunundrumInit.cpp  test_gameInit.cpp  test_tokenInit.cpp
day-03/: CMakeLists.txt
day-03/include/: gear.h  gearFactory.h  pseudoBitmap.h  token.h  tokenFactory.h
day-03/src/: gear.cpp  gearFactory.cpp  main.cpp  pseudoBitmap.cpp  token.cpp  tokenFactory.cpp
day-03/test/: CMakeLists.txt  test_Bitmap.cpp  test_Bitmap2.cpp  test_token.cpp
day-03/test/testdata/: test01.txt  test02.txt
day-04/: CMakeLists.txt
day-04/cmake/: genericTarget.cmake
day-04/include/: card.h  cardstash.h  game.h
day-04/src/: card.cpp  cardstash.cpp  main.cpp  stash.cpp
day-04/test/: CMakeLists.txt
day-05/: CMakeLists.txt
day-05/include/: AlmanacToBlock.h  Range.h  RangeMapper.h  seedRange.h  statemachine.h  states.h
day-05/src/: AlmanacToBlock.cpp  Range.cpp  RangeMapper.cpp  main.cpp  statemachine.cpp
day-05/test/: CMakeLists.txt  test_seeds.cpp
day-06/: CMakeLists.txt
day-06/include/: race.h  raceFactory.h
day-06/src/: main.cpp  race.cpp  raceFactory.cpp
day-07/: CMakeLists.txt
day-07/cmake/: genericTarget.cmake
day-07/include/: camelCards.h  camelCardsFactory.h
day-07/src/: camelCards.cpp  camelCardsFactory.cpp
day-07/test/: CMakeLists.txt  test_camelCards.cpp
day-08/: CMakeLists.txt
day-08/include/: Navigator.h  Node.h
day-08/src/: Navigator.cpp  Node.cpp  main.cpp
day-08/test/: CMakeLists.txt  test_Navigation.cpp  test_ghostlyNavigation.cpp
day-08/test/testdata/: test01.txt
